@@ -1,5 +1,7 @@
 $version Generated by VerilatedVcd $end
 $timescale 1ps $end
+ $scope module $rootio $end
+ $upscope $end
  $scope module another_top $end
   $var wire 1 # b $end
  $upscope $end
