@@ -1,0 +1,69 @@
+$version Generated by VerilatedVcd $end
+$timescale 1ps $end
+ $scope module $rootio $end
+  $var wire 1 # clk $end
+ $upscope $end
+ $scope module t $end
+  $var wire 1 # clk $end
+  $var wire 32 $ cyc [31:0] $end
+  $scope module sub $end
+   $var wire 32 % a [31:0] $end
+  $upscope $end
+ $upscope $end
+$enddefinitions $end
+
+
+#0
+0#
+b00000000000000000000000000000000 $
+b00000000000000000000010010111100 %
+#1
+1#
+b00000000000000000000000000000001 $
+#2
+0#
+#3
+1#
+b00000000000000000000000000000010 $
+#4
+0#
+#5
+1#
+b00000000000000000000000000000011 $
+#6
+0#
+#7
+1#
+b00000000000000000000000000000100 $
+#8
+0#
+#9
+1#
+b00000000000000000000000000000101 $
+#10
+0#
+#11
+1#
+b00000000000000000000000000000110 $
+#12
+0#
+#13
+1#
+b00000000000000000000000000000111 $
+#14
+0#
+#15
+1#
+b00000000000000000000000000001000 $
+#16
+0#
+#17
+1#
+b00000000000000000000000000001001 $
+#18
+0#
+#19
+1#
+b00000000000000000000000000001010 $
+#20
+0#
